@@ -1,0 +1,28 @@
+language: python
+sudo: false
+python:
+- '2.7'
+- '3.4'
+- '3.5'
+- '3.6'
+branches:
+  except:
+  - "/^feature.*$/"
+install:
+- pip install flake8
+- pip install -r requirements.txt
+- pip install coverage
+- pip install python-coveralls
+- python setup.py -q install
+script:
+- python setup.py test
+- flake8 --ignore E501,E123,W504 biomaj_core/*.py
+deploy:
+  provider: pypi
+  skip_existing: true
+  user: osallou
+  password:
+    secure: YQSe/QsKszbPDQSQSS+u1WGvDB6akPFukU+msOqEX7lupyfLHQPnfvRt4AbiwMvdslXjAn8Y25vp25Gb5cnut4E9RBS+hUihcCBMuwtC/E+Hyy+kAG8zue5oH5sv5kuKLxfNmHSyi4t0VfusuabHGw1Wq5QIqBhpbOlefxnUpPrOeKcDwVE17fLcdhPsz5E4InsoTfFKGFtsgTzRMSqfdCWuzWdtO7oglSLuDk0Ow2E8I37jAiOvBLB9Cj4dynmRVUMRrXfZT76DWX9fEzI5OoT9O62nt6l5p6dEewRrSqU5ODSOlpUXiehuS1wCKKHm8ORdERpxATN274xg8lYeFFs8CVCdXFRoEy8YBql8YOw+qmzOpK8tDQAneDFbCOWTg3kR/HUGZwuvo8lEka/SGsZsOJXdBq3C1WVUxb//vTf0owu7p82Z0INMaZ0UB/MLwYq1O8lTzsrY7f+Za2enayOUmFs1li+Ib5JLs8yoVGjzieadxSrmpYbCWjz6bGPuXUtkd00X/xiQYehQmoiOMD/lTDOiC+CcySG4mwjtj+fO7KLS8LH2SRcjoIxIdKNGifXoL1Mu1/iQzrpEoY8KuPXgFuqWyg9w5KWQ1LV8EAoUUJTbQDb/XxtIn1RUGxS7CEmVEheIiu+hI/VmWdBuqPYoI/pzRA9g3YpaylvJqxM=
+  distributions: sdist bdist_wheel
+  on:
+    tags: true
