@@ -6,5 +6,5 @@ flask
 python-consul
 prometheus_client>=0.0.18
 requests
-biomaj-core>=3.0.10
-biomaj>=3.1.6
+biomaj-core>=3.0.16
+biomaj>=3.1.7
